k8s/phpmyadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: finance-phpmyadmin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: phpmyadmin
